# glade-audioV1

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Engine/: EnvelopeFollower.h  FXChain.cpp  FXChain.h  GladeConstants.h  Grain.h  GrainParams.h  GrainPool.cpp  GrainPool.h  GrainScheduler.cpp  GrainScheduler.h  GranularEngine.cpp  GranularEngine.h  LFOFunction.h  PitchDetector.h  PresetManager.cpp  PresetManager.h  SampleBuffer.cpp  SampleBuffer.h  SampleMap.cpp  SampleMap.h  ScaleQuantizer.h  StepSequencer.h  WavetableBuffer.h  WindowFunction.h
Source/UI/: ADSRDisplay.h  FXSlotUI.cpp  FXSlotUI.h  FractalVisualizer.cpp  FractalVisualizer.h  GladeKnob.cpp  GladeKnob.h  GladeLookAndFeel.cpp  GladeLookAndFeel.h  LFODisplay.h  SampleMapUI.cpp  SampleMapUI.h  StepSequencerUI.h  WaveformDisplay.cpp  WaveformDisplay.h
